# onchain-aml

./: .gitignore  LICENSE  README.md  pyproject.toml
chain_scanner/: __init__.py  cli.py  config.py  scanner.py
chain_scanner/chains/: __init__.py  base.py  bitcoin.py  ethereum.py
chain_scanner/data/: bridges.json  mixers.json  privacy_tokens.json  sanctions.json
chain_scanner/detectors/: __init__.py  base.py  bridges.py  layering.py  mixer.py  privacy_coins.py  sanctions.py  structuring.py
chain_scanner/reports/: __init__.py  csv_report.py  json_report.py  terminal_report.py
chain_scanner/sources/: __init__.py  api_source.py  base.py  file_source.py  node_source.py
tests/: __init__.py  test_detectors.py  test_sources.py
tests/fixtures/: clean_wallet.json  flagged_wallet.json  structuring_pattern.json
